<resources>
    <string name="app_name">TripPlanner</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">TripPlanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="set_hour_title">Preferowana godzina rozpoczęcia lunchu:</string>
    <string name="set_duration_title">Preferowany czas trwania lunchu:</string>
    <string name="set_place_title">Preferowane miejsce lunchu:</string>
    <string name="set_place_radio_button_1">chcę wybrać konkretne miejsce</string>
    <string name="set_place_radio_button_2">chcę wybrać typ restauracji</string>
    <string name="set_place_radio_button_3">jestem otwarty na propozycje</string>
    <string name="set_place_radio_button_4">nie chcę jeść lunchu</string>
</resources>
